--- a/angles.html
+++ b/angles.html
@@ -4,4 +4,8 @@
     <title>Triangle</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
+  <body>
+
+   <script src="js/scripts.js"></script>
+    <h1>TRIANGLE TRACKER</h1>
 </html>
