--- a/angles.html
+++ b/angles.html
@@ -9,3 +9,4 @@
    <script src="js/scripts.js"></script>
     <h1>TRIANGLE TRACKER</h1>
 </html>
+<p><strong>Here we are going to see if the triangle is equilateral,isosceles,scalene or not:</strong></p>
