--- a/angles.html
+++ b/angles.html
@@ -9,4 +9,7 @@
    <script src="js/scripts.js"></script>
     <h1>TRIANGLE TRACKER</h1>
 </html>
-<p><strong>Here we are going to see if the triangle is equilateral,isosceles,scalene or not:</strong></p>
+<p><strong>Here we are going to see if the triangle is equilateral,isosceles <div>
+
+<label>Enter side1: </label>
+<input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
