--- a/angles.html
+++ b/angles.html
@@ -13,3 +13,5 @@
 
 <label>Enter side1: </label>
 <input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
+<label>Enter side2: </label>
+<input type="text" name="B" value="" class="input" id="input_id"><br><br>
