--- a/angles.html
+++ b/angles.html
@@ -15,3 +15,5 @@
 <input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
 <label>Enter side2: </label>
 <input type="text" name="B" value="" class="input" id="input_id"><br><br>
+<label>Enter side3: </label>
+<input type="text" name="C" value="" class="inpt" id="input_id"><br><br>
