--- a/angles.html
+++ b/angles.html
@@ -17,3 +17,4 @@
 <input type="text" name="B" value="" class="input" id="input_id"><br><br>
 <label>Enter side3: </label>
 <input type="text" name="C" value="" class="inpt" id="input_id"><br><br>
+<input type="button" value="submit!" onClick="Triangle()">
