--- a/angles.html
+++ b/angles.html
@@ -8,7 +8,7 @@
 
    <script src="js/scripts.js"></script>
     <h1>TRIANGLE TRACKER</h1>
-</html>
+
 <p><strong>Here we are going to see if the triangle is equilateral,isosceles <div>
 
 <label>Enter side1: </label>
@@ -18,3 +18,8 @@
 <label>Enter side3: </label>
 <input type="text" name="C" value="" class="inpt" id="input_id"><br><br>
 <input type="button" value="submit!" onClick="Triangle()">
+
+</div>
+
+</body>
+</html>
