--- a/angles.html
+++ b/angles.html
@@ -5,21 +5,33 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+      <script src="js/script.js"></script>
+      <div id="form">
+      <h1>TRIANGLE TRACKER</h1>
 
-   <script src="js/scripts.js"></script>
-    <h1>TRIANGLE TRACKER</h1>
-
-<p><strong>Here we are going to see if the triangle is equilateral,isosceles <div>
-
-<label>Enter side1: </label>
-<input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
-<label>Enter side2: </label>
-<input type="text" name="B" value="" class="input" id="input_id"><br><br>
-<label>Enter side3: </label>
-<input type="text" name="C" value="" class="inpt" id="input_id"><br><br>
-<input type="button" value="submit!" onClick="Triangle()">
-
+      <p><strong>Here we are going to see if the triangle is equilateral,isoscele
+<div>
+      <label>Enter side1: </label>
+      <input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
+      <label>Enter side2: </label>
+      <input type="text" name="B" value="" class="input" id="input_id2"><br><br>
+      <label>Enter side3: </label>
+      <input type="text" name="C" value="" class="inpt" id="input_id3"><br><br>
+      
+      <button onclick="Triangle()">Submit</button>
+      <p id="Text"></p>
+      </div>
+    </div>
+      
 </div>
+      </strong>
+<footer>
+  
+  <p>City :Kigali - RW</p>
+  <p>Phone :+250788980122</p>
+  <p>Contact information: <a href="alikimy02@gmail.com"></a>alikimy02@gmail.com</p>
+  <p>copyright (c) 2018 UWIMANA Aline</p>
+</footer>
 
 </body>
 </html>
