--- a/angles.html
+++ b/angles.html
@@ -28,6 +28,7 @@
 <footer>
   <p>City :Kigali - RW</p> 
   <p>Phone :+250788980122</p>
+  <p>Contact information: <a href="alikimy02@gmail.com"></a>alikimy02@gmail.com</p>
   
 </footer>
 
