--- a/angles.html
+++ b/angles.html
@@ -29,7 +29,7 @@
   <p>City :Kigali - RW</p> 
   <p>Phone :+250788980122</p>
   <p>Contact information: <a href="alikimy02@gmail.com"></a>alikimy02@gmail.com</p>
-  
+  <p>copyright (c) 2018 UWIMANA Aline</p>
 </footer>
 
 </body>
