--- a/angles.html
+++ b/angles.html
@@ -9,7 +9,7 @@
       <div id="form">
       <h1>TRIANGLE TRACKER</h1>
 
-      <p><strong>Here we are going to see if the triangle is equilateral,isoscele
+      <p><strong>Here we are going to see if the triangle is equilateral,isoscele,scalene or undefined
 <div>
       <label>Enter side1: </label>
       <input type="text" name="A" value="" class="inpt" id="input_id"> <br><br>
